# Insult-Generator

./: main.py  pyproject.toml
