[tool.poetry]
name = "insult-generator"
version = "0.1.0"
description = "Insult generator"
authors = ["Harvey Warren https://github.com/Graphicks"]

[tool.poetry.dependencies]
python = "^3.8"
gTTS = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
